unpackaged/main/default/objects/bt_base__Form__c/bt_base__Form__c.object-meta.xml
<CustomObject>
    <description>Create sets of custom questions.</description>
    <label>BT Form</label>
    <nameField>
        <label>BT Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>