unpackaged/main/default/objects/bt_base__Form__c/fields/bt_base__Encrypted_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Encrypted_ID__c</fullName>
    <description>Indexed and encrypted key field that is used by Blackthorn APIs. Generated with before insert and update triggers if is ever blank.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indexed and encrypted key field that is used by Blackthorn APIs. Generated with before insert and update triggers if is ever blank.</inlineHelpText>
    <label>Encrypted ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>