unpackaged/main/default/objects/bt_base__Form__c/fields/bt_base__Key__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Indexed key field that is used by Blackthorn APIs and URLs.</description>
    <externalId>true</externalId>
    <inlineHelpText>Indexed key field that is used by Blackthorn APIs and URLs.</inlineHelpText>
    <label>Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>