unpackaged/main/default/objects/bt_base__Form__c/fields/bt_base__Last_Publish_To_Platform_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Last_Publish_To_Platform_Completed_At__c</fullName>
    <description>The date/time the changes to this record were made public.</description>
    <inlineHelpText>The date/time the changes to this record were made public.</inlineHelpText>
    <label>Last Publish To Platform Completed At</label>
    <type>DateTime</type>
</CustomField>