unpackaged/main/default/objects/bt_base__Form__c/fields/bt_base__Last_Publish_To_Platform_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Last_Publish_To_Platform_Requested_At__c</fullName>
    <description>The date/time the changes to this record were sent to update your public custom questions.</description>
    <inlineHelpText>The date/time the changes to this record were sent to update your public custom questions.</inlineHelpText>
    <label>Last Publish To Platform Requested At</label>
    <type>DateTime</type>
</CustomField>