unpackaged/main/default/objects/bt_base__Form__c/fields/bt_base__Submitted_Message__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Submitted_Message__c</fullName>
    <description>Include a personal message. There will already be a title above this message that says, &quot;Welcome [Attendee&#39;s First Name],&quot;</description>
    <inlineHelpText>Include a personal message. There will already be a title above this message that says, &quot;Welcome [Attendee&#39;s First Name],&quot;</inlineHelpText>
    <label>Submitted Message</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>