unpackaged/main/default/objects/bt_base__Form__c/fields/conference360__Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type__c</fullName>
    <description>The type of question/Form Element.</description>
    <inlineHelpText>Set the type of form this is.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-registration</fullName>
            </value>
            <value>
                <fullName>Post-registration</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>